--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "nodemon": "^3.1.7"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server/index.js",
+    "dev": "nodemon server/index.js"
   },
   "author": "",
   "license": "ISC",
