--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "express": "^4.21.0",
     "graphql": "^16.9.0",
-    "graphql-http": "^1.22.1"
+    "graphql-http": "^1.22.1",
+    "graphql-playground-middleware-express": "^1.7.23"
   },
   "name": "graphql-course",
   "version": "1.0.0",
