--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "colors": "^1.4.0",
+    "cors": "^2.8.5",
     "express": "^4.21.0",
     "graphql": "^16.9.0",
     "graphql-http": "^1.22.1",
